src/app/(public)/trouver-un-logement-etudiant/ville/[location]/[slug]/logement.module.css
.container {
  display: block;
  position: relative;

  @media (min-width: 768px) {
    display: flex;
  }

  gap: 1.5rem;
  padding-bottom: 2rem;
}

.infosContainer {
  background-color: white;
  border: 1px solid var(--border-default-grey);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.section {
  border-bottom: 1px solid #e5e5e5;
  padding: 1rem 1rem;
}

@media (min-width: 768px) {
  .section {
    padding: 3rem 3.5rem;
  }
}

.tagContainer {
  align-items: center;
  display: flex;
  gap: 0.5rem;
}

.locationContent {
  display: flex;
  border-bottom: 1px solid #e5e5e5;
  justify-content: space-between;
}

.locationInfo {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;
  padding: 1rem 1rem;

  @media (min-width: 768px) {
    width: 50%;
    padding: 3rem 3.5rem;
  }
}

.sidebarCard {
  align-items: center;
  background: white;
  border: 1px solid var(--border-default-grey);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  justify-content: center;
  padding: 3rem 3.5rem;
  margin-top: 1rem;

  @media (min-width: 768px) {
    margin-top: 0rem;
  }
}

.sidebarTitle {
  white-space: nowrap;
  line-height: 3rem;
  margin: 0;
}

.sidebarText {
  margin: 0;
}

.sidebarOwner {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1.5rem;
}

.sidebarShare {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}
.buttonGroup {
  display: flex;
  gap: 1rem;
}

.equipmentsGrid {
  display: grid;
  gap: 1rem;

  @media (min-width: 768px) {
    grid-template-columns: repeat(3, 1fr);
  }
  @media (max-width: 768px) {
    grid-template-columns: repeat(2, 1fr);
  }
}

.prepareStudentLifeSection {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.stickyColumn {
  position: sticky;
  top: 2rem;
  align-self: flex-start;
}

